Added swagger to login route and added bearer security to swagger
